--- a/index.html
+++ b/index.html
@@ -1,22 +1,84 @@
 <!DOCTYPE HTML>
 <html lang="ru">
 <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta content="" name="description"/>
-    <meta content="" name="keywords">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="telephone=no" name="format-detection">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta charset="utf-8">
+  <title></title>
+  <meta content="" name="description"/>
+  <meta content="" name="keywords">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="telephone=no" name="format-detection">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
 
-    <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
-    <link href="#" rel="shortcut icon">
-    <meta content="petersburg-studio.com" name="author">
+  <link href="#" rel="shortcut icon">
+  <meta content="petersburg-studio.com" name="author">
 </head>
 <body>
 
-<script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
+<header>
+  <div class="wrapper">
+    <div class="header">
+      <div class="logo">
+        <a href="#">
+        </a>
+      </div>
+
+      <div class="header__hamburger">
+        <a class="adaptive-menu-toggle" href="#">
+          <span class="menu-toggle-inner">
+            <span class="menu-toggle-line menu-toggle-line--1"></span>
+            <span class="menu-toggle-line menu-toggle-line--2"></span>
+            <span class="menu-toggle-line menu-toggle-line--3"></span>
+            <span class="menu-toggle-line menu-toggle-line--4"></span>
+            <span class="menu-toggle-line menu-toggle-line--5"></span>
+          </span>
+        </a>
+      </div>
+
+      <div class="headerNav_adaptive">
+        <ul class="nav">
+          <li>
+            <a href="#">Клиника</a>
+          </li>
+          <li>
+            <a href="#">Наши услуги</a>
+          </li>
+          <li>
+            <a href="#">Врачи</a>
+          </li>
+          <li>
+            <a href="#">Цены</a>
+          </li>
+          <li>
+            <a href="#">Акции</a>
+          </li>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="s_hero">
+  <div class="wrapper_fullHD">
+    <div class="hero__slider">
+    </div>
+  </div>
+</div>
+
+<footer>
+  <div class="wrapper">
+    <div class="footer">
+    </div>
+  </div>
+</footer>
+
 <script src="js/scripts.js" type="text/javascript"></script>
 
 </body>
