--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
 
             <nav class="nav__header-top">
                 <ul class="header__top__nav-list">
-                    <li>
+                    <li class="header__top__nav-item">
                         <a href="#" class="header__top__nav-link">О КОМПАНИИ</a>
                     </li>
-                    <li>
+                    <li class="header__top__nav-item">
                         <a href="#" class="header__top__nav-link">ПОРТФОЛИО</a>
                     </li>
-                    <li>
+                    <li class="header__top__nav-item">
                         <a href="#" class="header__top__nav-link">КОНТАКТЫ</a>
                     </li>
                 </ul>
             </nav>
 
             <div class="header__top__right-block">
-                <a href="tel:+78126655112" type="" class="btn btn_transperent">
+                <a href="tel:+78126655112" type="" class="btn btn_transperent btn_phone-icon">
                     +7 812 665 51 12
-<!--                    <span class="btn__content">+7 812 665 51 12</span>-->
+                    <!--                    <span class="btn__content">+7 812 665 51 12</span>-->
                 </a>
                 <span class="work-time">Пн-пт, с 10:00 до 19:00</span>
             </div>
@@ -194,7 +194,7 @@
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
-                                          fill="#1378BA"/>
+                                          fill="#ffffff"/>
                                 </svg>
                             </a>
                         </div>
@@ -221,7 +221,7 @@
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
-                                          fill="#1378BA"/>
+                                          fill="#ffffff"/>
                                 </svg>
                             </a>
                         </div>
@@ -246,7 +246,7 @@
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
-                                          fill="#1378BA"/>
+                                          fill="#ffffff"/>
                                 </svg>
                             </a>
                         </div>
@@ -271,7 +271,7 @@
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
-                                          fill="#1378BA"/>
+                                          fill="#ffffff"/>
                                 </svg>
                             </a>
                         </div>
@@ -296,7 +296,7 @@
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
-                                          fill="#1378BA"/>
+                                          fill="#ffffff"/>
                                 </svg>
                             </a>
                         </div>
@@ -321,7 +321,7 @@
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
-                                          fill="#1378BA"/>
+                                          fill="#ffffff"/>
                                 </svg>
                             </a>
                         </div>
@@ -406,8 +406,10 @@
                                     </div>
                                     <div class="staff__item__surname">Поджарова</div>
                                     <div class="staff__item__name">Елена
-                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)" fill="#1378BA"/>
+                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)"
+                                                  fill="#1378BA"/>
                                         </svg>
                                     </div>
                                     <div class="staff__item__prof">Руководитель отдела контекстной рекламы</div>
@@ -429,8 +431,10 @@
                                     </div>
                                     <div class="staff__item__surname">Поджарова</div>
                                     <div class="staff__item__name">Елена
-                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)" fill="#1378BA"/>
+                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)"
+                                                  fill="#1378BA"/>
                                         </svg>
                                     </div>
                                     <div class="staff__item__prof">Руководитель отдела контекстной рекламы</div>
@@ -452,8 +456,10 @@
                                     </div>
                                     <div class="staff__item__surname">Поджарова</div>
                                     <div class="staff__item__name">Елена
-                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)" fill="#1378BA"/>
+                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)"
+                                                  fill="#1378BA"/>
                                         </svg>
                                     </div>
                                     <div class="staff__item__prof">Руководитель отдела контекстной рекламы</div>
@@ -475,8 +481,10 @@
                                     </div>
                                     <div class="staff__item__surname">Поджарова</div>
                                     <div class="staff__item__name">Елена
-                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)" fill="#1378BA"/>
+                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)"
+                                                  fill="#1378BA"/>
                                         </svg>
                                     </div>
                                     <div class="staff__item__prof">Руководитель отдела контекстной рекламы</div>
@@ -498,8 +506,10 @@
                                     </div>
                                     <div class="staff__item__surname">Поджарова</div>
                                     <div class="staff__item__name">Елена
-                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)" fill="#1378BA"/>
+                                        <svg width="28" height="1" viewBox="0 0 28 1" fill="none"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <rect x="28" width="1" height="28" transform="rotate(90 28 0)"
+                                                  fill="#1378BA"/>
                                         </svg>
                                     </div>
                                     <div class="staff__item__prof">Руководитель отдела контекстной рекламы</div>
@@ -520,6 +530,52 @@
             <div class="wrapper">
                 <div class="portfolio">
                     <h2 class="title">НАШЕ <span class="green">ПОРТФОЛИО</span></h2>
+                    <div class="portfolio__list">
+
+                        <div class="portfolio__item">
+                            <img src="./images/portfolio1.jpg" class="portolio__img" alt="">
+                            <div class="portfolio__item__text-container">
+                                <div class="portfolio__item__text__title"><span class="grey">MEBELBOR -</span> ИНТЕРНЕТ-МАГАЗИН
+                                    ПО ПРОДАЖЕ МЕБЕЛИ</div>
+                                <div class="portfolio__item__text__info">Контекстная реклама, настройка мультиканальной
+                                    аналитики, оптимизация по ROI и ДРР</div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio__item">
+                            <img src="./images/portfolio2.jpg" class="portolio__img" alt="">
+                            <div class="portfolio__item__text-container">
+                                <div class="portfolio__item__text__title"><span class="grey">MEBELBOR -</span> ИНТЕРНЕТ-МАГАЗИН
+                                    ПО ПРОДАЖЕ МЕБЕЛИ</div>
+                                <div class="portfolio__item__text__info">Контекстная реклама, настройка мультиканальной
+                                    аналитики, оптимизация по ROI и ДРР</div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio__item">
+                            <img src="./images/portfolio3.jpg" class="portolio__img" alt="">
+                            <div class="portfolio__item__text-container">
+                                <div class="portfolio__item__text__title"><span class="grey">MEBELBOR -</span> ИНТЕРНЕТ-МАГАЗИН
+                                    ПО ПРОДАЖЕ МЕБЕЛИ</div>
+                                <div class="portfolio__item__text__info">Контекстная реклама, настройка мультиканальной
+                                    аналитики, оптимизация по ROI и ДРР</div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio__item">
+                            <img src="./images/portfolio4.jpg" class="portolio__img" alt="">
+                            <div class="portfolio__item__text-container">
+                                <div class="portfolio__item__text__title"><span class="grey">MEBELBOR -</span> ИНТЕРНЕТ-МАГАЗИН
+                                    ПО ПРОДАЖЕ МЕБЕЛИ</div>
+                                <div class="portfolio__item__text__info">Контекстная реклама, настройка мультиканальной
+                                    аналитики, оптимизация по ROI и ДРР</div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <a href="#callback_modal" class="btn btn_white">
+                        ПОКАЗАТЬ ВСЕ ПРОЕКТЫ</a>
+
                 </div>
             </div>
         </div>
@@ -631,8 +687,8 @@
                     </nav>
                 </div>
                 <div class="footer__column">
-                    <a href="tel:+78126655112" type="" class="btn btn_gradient">
-                        <span class="btn__content">+7 812 665 51 12</span>
+                    <a href="tel:+78126655112" type="" class="btn btn_transperent btn_phone-icon">
+                        +7 812 665 51 12
                     </a>
                     <ul class="footer__contacts__list">
                         <li class="footer__contacts__item work-time">Пн-пт, с 10:00 до 19:00</li>
