some another changes

--- a/services.html
+++ b/services.html
@@ -180,7 +180,6 @@
                         <div class="services__info__button-wrapper">
                             <a href="#" class="btn btn_small btn_blue">ПОДРОБНЕЕ</a>
                         </div>
-
                     </div>
                 </li>
 
@@ -540,6 +539,62 @@
                     </div>
 
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="s_callback">
+    <div class="wrapper_fullHD">
+        <div class="callback">
+            <div class="wrapper">
+                <h3 class="white">ЗАКАЖИТЕ ИНДИВИДУАЛЬНЫЙ РАСЧЕТ ДЛЯ ПРОДВИЖЕНИЯ ВАШЕГО БИЗНЕСА</h3>
+                <form method="post"
+                      action="#"
+                      enctype="multipart/form-data"
+                      class="callback__form"
+                      data-form-ids="popup">
+
+                    <div class="callback__input-wrapper">
+                        <input type="text" name="modal_name" placeholder="Введите ваше имя" class="form-input" required="">
+                        <input type="text" name="modal_phone" placeholder="Введите ваш телефон"
+                               class="form-input form-input--tel" required="">
+                        <input type="text" name="modal_email" placeholder="Ваш проект"
+                               class="form-input" required="">
+                    </div>
+
+                    <div class="callback__input-wrapper">
+                        <textarea name="modal_message" class="form-input form-textarea" id="" cols="30" rows="4" placeholder="Комментарий (не обязательно)"></textarea>
+
+                        <div class="modal-form__row callback__add-file">
+                            <button type="button" class="btn btn_small btn_small_white" name="add_file" value="" >
+                                ПРИКРЕПИТЬ ФАЙЛ
+                            </button>
+                            <div class="form__added-file">
+                                <span class="form__file-name">filename.doc</span>
+                                <button type="button" class="btn btn__delete-file" name="send" value="" >
+                                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M9.66683 1.27325L8.72683 0.333252L5.00016 4.05992L1.2735 0.333252L0.333496 1.27325L4.06016 4.99992L0.333496 8.72659L1.2735 9.66659L5.00016 5.93992L8.72683 9.66659L9.66683 8.72659L5.94016 4.99992L9.66683 1.27325Z" fill="#E0E0E0"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="callback__input-wrapper callback__submit-wrapper">
+                        <button type="submit" class="btn_submit btn btn_submit_white" name="send" value="" >
+                            ОСТАВИТЬ ЗАЯВКУ НА ИДИВИДУАЛЬНЫЙ РАСЧЕТ
+                        </button>
+
+                        <label class="notice_checked__label callback__notice">
+                            <input type="checkbox" class="notice_checked" checked="" name="notice">
+                            Я согласен с условиями обработки данных
+                        </label>
+                    </div>
+
+<!--                    <div class="callback__input-wrapper">-->
+<!--                    </div>-->
+                </form>
             </div>
         </div>
     </div>
