monday morning commit

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="portfolio.html" class="header__top__nav-link">ПОРТФОЛИО</a>
                     </li>
                     <li class="header__top__nav-item">
-                        <a href="#" class="header__top__nav-link">КОНТАКТЫ</a>
+                        <a href="contacts.html" class="header__top__nav-link">КОНТАКТЫ</a>
                     </li>
                 </ul>
             </nav>
