--- a/services.html
+++ b/services.html
@@ -37,24 +37,24 @@
                 </button>
             </div>
 
-            <nav class="nav__header-top">
-                <ul class="header__top__nav-list">
-                    <li class="header__top__nav-item">
-                        <a href="#" class="header__top__nav-link">О КОМПАНИИ</a>
-                    </li>
-                    <li class="header__top__nav-item">
-                        <a href="/portfolio.html" class="header__top__nav-link">ПОРТФОЛИО</a>
-                    </li>
-                    <li class="header__top__nav-item">
-                        <a href="#" class="header__top__nav-link">КОНТАКТЫ</a>
-                    </li>
-                </ul>
-            </nav>
-
+            <div class="headerNav_adaptive">
+                <nav class="nav__header-top">
+                    <ul class="header__top__nav-list">
+                        <li class="header__top__nav-item">
+                            <a href="#" class="header__top__nav-link">О КОМПАНИИ</a>
+                        </li>
+                        <li class="header__top__nav-item">
+                            <a href="/portfolio.html" class="header__top__nav-link">ПОРТФОЛИО</a>
+                        </li>
+                        <li class="header__top__nav-item">
+                            <a href="contacts.html" class="header__top__nav-link">КОНТАКТЫ</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
             <div class="header__top__right-block">
                 <a href="tel:+78126655112" type="" class="btn btn_transperent btn_phone-icon">
                     +7 812 665 51 12
-                    <!--                    <span class="btn__content">+7 812 665 51 12</span>-->
                 </a>
                 <span class="work-time">Пн-пт, с 10:00 до 19:00</span>
             </div>
