--- a/web-analit.html
+++ b/web-analit.html
@@ -368,7 +368,7 @@
     <div class="wrapper_fullHD">
         <div class="partners">
             <div class="wrapper">
-                <h2 class="title">ИСПОЛЬЗУЕМ <span class="green">ВЕДУЩИЕ</span> ТЕХНОЛОГИИ</h2>
+                <h2 class="title">ИСПОЛЬЗУЕМ <span class="green">ВЕДУЩИЕ</span><br>ТЕХНОЛОГИИ</h2>
                 <div class="partners__list">
                     <div class="partners__item">
                         <div class="partners__item__wrapper">
