--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="bg-text bg-text_services"></div>
         <div class="services services_main">
             <h2 class="title">НАШИ <span class="blue">КОМПЕТЕНЦИИ</span></h2>
-            <ul class="services__list">
+            <ul class="services__list services__list_main">
                 <li class="services__item">
                     <div class="services__image-block"></div>
                     <div class="services__info">
