--- a/case.html
+++ b/case.html
@@ -50,7 +50,7 @@
                 </ul>
                 <ul class="header__nav-list_bottom header__nav-list_bottom_common"
                     aria-label="services navigation услуги">
-                    <ali>
+                    <li>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -145,10 +145,10 @@
     <div class="wrapper_fullHD">
         <div class="hero hero_case">
             <div class="wrapper">
-                    <div class="hero_case__first-block innerWhiteStripe">
-                        <h1 class="white">КОМПЛЕКСНЫЙ PERFOMANCE-<br>MARKETING ДЛЯ ИНТЕРНЕТ-МАГАЗИНА<br>MEBELBOR.RU</h1>
-                        <a href="/services.html" class="btn btn_transperent_white btn_arrowL">Все кейсы</a>
-                    </div>
+                <div class="hero_case__first-block innerWhiteStripe">
+                    <h1 class="white">КОМПЛЕКСНЫЙ PERFOMANCE-<br>MARKETING ДЛЯ ИНТЕРНЕТ-МАГАЗИНА<br>MEBELBOR.RU</h1>
+                    <a href="/services.html" class="btn btn_transperent_white btn_arrowL">Все кейсы</a>
+                </div>
                 <p>Контекстная реклама, настройка мультикнальной аналитики, оптимизация по ROI и ДРР</p>
             </div>
         </div>
@@ -222,77 +222,42 @@
     </div>
 </div>
 
-<div class="s_partners">
-    <div class="wrapper_fullHD">
-        <div class="partners">
-            <div class="wrapper">
-                <h2 class="title">ИСПОЛЬЗУЕМ <span class="green">ВЕДУЩИЕ</span> ТЕХНОЛОГИИ</h2>
-                <div class="partners__list">
-                    <div class="partners__item">
-                        <div class="partners__item__wrapper">
-                            <img src="./images/partners1.png" alt="" class="partners__img">
-                            <a href="#" class="partners__link">
-                                ООО СтройМашСервис - завод по производству бетона</a>
-                        </div>
-                    </div>
-
-                    <div class="partners__item">
-                        <div class="partners__item__wrapper">
-                            <img src="./images/partners2.png" alt="" class="partners__img">
-                            <a href="#" class="partners__link">
-                                ООО СтройМашСервис - завод по производству бетона</a>
-                        </div>
-                    </div>
-
-                    <div class="partners__item">
-                        <div class="partners__item__wrapper">
-                            <img src="./images/partners1.png" alt="" class="partners__img">
-                            <a href="#" class="partners__link">
-                                ООО СтройМашСервис - завод по производству бетона</a>
-                        </div>
-                    </div>
-
-                    <div class="partners__item">
-                        <div class="partners__item__wrapper">
-                            <img src="./images/partners2.png" alt="" class="partners__img">
-                            <a href="#" class="partners__link">
-                                ООО СтройМашСервис - завод по производству бетона</a>
-                        </div>
-                    </div>
-
-                    <div class="partners__item">
-                        <div class="partners__item__wrapper">
-                            <img src="./images/partners1.png" alt="" class="partners__img">
-                            <a href="#" class="partners__link">
-                                ООО СтройМашСервис - завод по производству бетона</a>
-                        </div>
-                    </div>
-
-                    <div class="partners__item">
-                        <div class="partners__item__wrapper">
-                            <img src="./images/partners2.png" alt="" class="partners__img">
-                            <a href="#" class="partners__link">
-                                ООО СтройМашСервис - завод по производству бетона</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="s_stage">
     <div class="wrapper">
         <div class="stage">
-            <h2 class="title"><span class="green">КАК</span> МЫ РАБОТАЕМ?</h2>
-            <ul class="stage__list">
+            <h2 class="title"><span class="green">РАБОТА</span> НАД ПРОЕКТОМ</h2>
+            <ol class="stage__list">
                 <li class="stage__list__item">
-                    <h3><span class="blue">01.</span> Анализ ниши, разработка стратегии</h3>
-                    <p>Вот вам яркий пример современных тенденций - реализация намеченных плановых заданий однозначно
-                        фиксирует необходимость системы массового участия. </p>
+                    <h3>Настройка аналитики</h3>
+                    <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
+                        объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
+                        исследований способствует подготовке и реализации поставленных обществом задач.</p>
                 </li>
-            </ul>
+                <li class="stage__list__item">
+                    <h3>Доработка маркетинговой стратегии</h3>
+                    <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
+                        объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
+                        исследований способствует подготовке и реализации поставленных обществом задач.</p>
+                </li>
+                <li class="stage__list__item">
+                    <h3>Оптимизация контекстной рекламы</h3>
+                    <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
+                        объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
+                        исследований способствует подготовке и реализации поставленных обществом задач.</p>
+                </li>
+                <li class="stage__list__item">
+                    <h3>Новые механики в таргетированной рекламе</h3>
+                    <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
+                        объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
+                        исследований способствует подготовке и реализации поставленных обществом задач.</p>
+                </li>
+                <li class="stage__list__item">
+                    <h3>Дополнительные инструменты маркетинга</h3>
+                    <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
+                        объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
+                        исследований способствует подготовке и реализации поставленных обществом задач.</p>
+                </li>
+            </ol>
         </div>
     </div>
 </div>
@@ -473,7 +438,7 @@
 <div class="s_result">
     <div class="wrapper">
         <div class="result">
-            <h2 class="title">НАШИ<br><span class="green">РЕЗУЛЬТАТЫ:</span></h2>
+            <h2 class="title">НАШИ <span class="green">РЕЗУЛЬТАТЫ:</span></h2>
             <ul class="result__list">
                 <li class="result__list__item">
                     <span class="result__list__item__title">Повышение конерсии</span>
