--- a/complex.html
+++ b/complex.html
@@ -25,7 +25,7 @@
             </a>
 
             <div class="header__hamburger">
-                <button class="adaptive-menu-toggle" type="button">
+                <button class="adaptive-menu-toggle btn_menu" type="button">
                   <span class="menu-toggle-inner">
                     <span class="menu-toggle-line menu-toggle-line--1"></span>
                     <span class="menu-toggle-line menu-toggle-line--2"></span>
@@ -410,7 +410,7 @@
                         фиксирует необходимость системы массового участия. </p>
                 </li>
                 <li class="how__list__item">
-                    <h3><span class="blue">02.</span> Настройка<br>аналитики</h3>
+                    <h3><span class="blue">02.</span> Настройка аналитики</h3>
                     <p>Вот вам яркий пример современных тенденций - реализация намеченных плановых заданий однозначно
                         фиксирует необходимость системы массового участия.</p>
                 </li>
