--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
 
             <div class="header__hamburger">
-                <button class="adaptive-menu-toggle" type="button">
+                <button class="adaptive-menu-toggle btn_menu" type="button">
                   <span class="menu-toggle-inner">
                     <span class="menu-toggle-line menu-toggle-line--1"></span>
                     <span class="menu-toggle-line menu-toggle-line--2"></span>
@@ -363,7 +363,9 @@
     <div class="wrapper_fullHD">
         <div class="approach approach_main">
             <div class="wrapper_right">
-                <img src="images/pogodin.jpg" alt="Погодин" class="approach__img">
+                <div class="approach_main__img-wrapper">
+                    <img src="images/pogodin.jpg" alt="Погодин" class="approach__img">
+                </div>
                 <div class="approach__text-block">
                     <h2 class="title"><span class="green">АВТОРСКИЙ</span> ПОДХОД К ИНТЕРНЕТ-РЕКЛАМЕ</h2>
 
