--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
             </a>
 
             <div class="header__hamburger">
-                <button class="adaptive-menu-toggle" type="button">
+                <button class="adaptive-menu-toggle btn_menu" type="button">
                   <span class="menu-toggle-inner">
                     <span class="menu-toggle-line menu-toggle-line--1"></span>
                     <span class="menu-toggle-line menu-toggle-line--2"></span>
